# SomewhereAnywhereEngine

./: .gitignore  Cargo.toml  build.rs  compile_shaders.sh  readme.md  todo.md
src/: main.rs
src/engine/: app.rs  mod.rs  vulkan_wrapper.rs  window_wrapper.rs
src/engine/components/: events.rs  mod.rs  vulkan_component.rs
src/engine/components/_old/command_bus/: command_bus.rs  mod.rs
src/engine/components/_old/entities/: entity.rs  entity_manager.rs
src/engine/components/command_bus/: command_bus.rs
src/engine/components/entities/: entity.rs  entity_manager.rs  mod.rs
src/engine/components/entity_component/: entity_component.rs  entity_events.rs  mod.rs
src/engine/components/events/: delete_object.rs  event.rs  event_manager.rs  manager.rs  mod.rs  render_object.rs
src/engine/components/gamestage/: gamestage.rs  mod.rs
src/engine/components/input_manager/: input_manager.rs  mod.rs
src/engine/components/vulkan_component/: mod.rs  vulkan_component.rs  vulkan_events.rs
src/engine/components/vulkan_manager/: mod.rs  vulkan_manager.rs
src/engine/event_bus/: event_bus.rs  mod.rs
src/engine/event_bus/events/: VulkanEvents.rs  mod.rs
src/engine/repositories/: entity_repository.rs  mod.rs
src/engine/structs/: mod.rs  vertex.rs  viewport.rs
src/engine/utils/: logger.rs  mod.rs
src/engine/utils/structs/: mod.rs  model.rs  transform.rs
src/engine/vulkan/: mod.rs  vulkan_container.rs
src/engine/vulkan/structs/: mod.rs  push_constants.rs  uniform_buffer_object.rs  vertex.rs  viewport.rs  vulkan_object.rs
src/shaders/: shader.frag  shader.vert
(+24 files in other folders)
