[package]
name = "SomewhereAnywhereEngine"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
bytemuck = "1.23.0"
chrono = "0.4.41"
foldhash = "0.1.5"
glam = { version = "0.30.3", features = ["bytemuck"] }
image = "0.25.6"
smallvec = "1.15.0"
vulkano = "0.35.1"
vulkano-shaders = "0.35.0"
winit = "0.30.10"
